<resources>
    <string name="app_name">SIKECE</string>
    <string name="default_notification_channel_name" translatable="false">fcm_default_name</string>
    <string name="title_activity_alert">AlertActivity</string>
    <string name="btn_alert">Lihat Lokasi saja</string>
    <string name="tv_alert">Info Kecelakaan!</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_agency">Nama Instansi</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Masuk atau Daftar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alert_info">Telah terjadi Kecelakaan pada \n%s pukul %s \nyang memicu Airbag sebuah mobil:</string>
    <string name="cd_car">Car crash top view</string>
    <string name="prompt_location">Lokasi Instansi</string>
    <string name="btn_daftar">Daftar</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="marker">marker</string>
    <string name="marker_shadow">marker shadow</string>
    <string name="ilustrasi">ilustrasi</string>
    <string name="kerusakan">Kerusakan:</string>
    <string name="save">Save</string>
    <string name="daftar">Daftarkan Instansi</string>
    <string name="none">Belum ada data!</string>
    <string name="notify_now">Notify Now</string>
    <string name="notify_5s_later">Notify 5s Later</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="do_action_get_location"><![CDATA[Tindak & Lihat Lokasi]]></string>
    <string name="unhandled">Belum ditangani!</string>
    <string name="handled">Sudah ditangani oleh:\n%s</string>
    <string name="centang">Centang</string>
</resources>