<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="AuthViewModel"
            type="com.airmineral.airbagalert.ui.auth.AuthViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/cd_car"
            android:rotation="25"
            android:src="@drawable/img_crash_top" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:elevation="@dimen/cardview_default_elevation"
            app:cardCornerRadius="24dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="8dp"
                android:paddingBottom="42dp"
                tools:context=".ui.auth.LoginFragment">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/daftar"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/agency_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="64dp"
                    android:layout_marginEnd="24dp"
                    android:autofillHints=""
                    android:hint="@string/prompt_agency"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:text="@={AuthViewModel.agencyName}"
                    android:textColorHint="#757575"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:autofillHints=""
                    android:focusable="false"
                    android:hint="@string/prompt_location"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:text="@{AuthViewModel.locationName}"
                    android:textColorHint="#757575"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/agency_name" />

                <TextView
                    android:id="@+id/register_failed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingHorizontal="16dp"
                    android:text="@{AuthViewModel.errorInfoRegister}"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_red_dark"
                    app:layout_constraintEnd_toEndOf="@id/location"
                    app:layout_constraintStart_toStartOf="@id/location"
                    app:layout_constraintTop_toBottomOf="@id/location"
                    tools:text="Invalid agency name or location" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="30dp"
                    android:paddingVertical="16dp"
                    android:text="@string/btn_daftar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/register_failed" />

                <ProgressBar
                    android:id="@+id/loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@id/btn_register"
                    app:layout_constraintStart_toStartOf="@id/btn_register"
                    app:layout_constraintTop_toTopOf="@id/btn_register"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>